--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,7 @@ ACCESS_EXPIRATION=60s
 REFRESH_EXPIRATION=7d # always in Days
 
 ADMIN_EMAIL=admin@admin.com
+ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin
 
 DB_USER=dbuser
