--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,11 @@ services:
       - ${REDIS_PORT}:6379
     volumes:
       - ./docker-data/redis:/data
+
+  redis-insight:
+    image: redis/redisinsight:latest
+    restart: always
+    ports:
+      - "5540:5540"
+    volumes:
+      - ./docker-data/redis-insight:/data
