--- a/package.json
+++ b/package.json
@@ -33,14 +33,16 @@
         "@nestjs/mapped-types": "*",
         "@nestjs/passport": "^10.0.3",
         "@nestjs/platform-express": "^10.3.5",
+        "@nestjs/swagger": "^7.4.0",
         "@prisma/client": "5.11.0",
+        "@wahyubucil/nestjs-zod-openapi": "^0.1.2",
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.6",
         "passport-jwt": "^4.0.1",
         "redis": "^4.6.13",
         "reflect-metadata": "^0.2.1",
         "rxjs": "^7.8.1",
-        "zod": "^3.22.4",
+        "zod": "^3.23.8",
         "zod-validation-error": "^3.0.3"
     },
     "devDependencies": {
